--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -26,6 +26,10 @@ jobs:
           cd ags
           meson setup --prefix $HOME/.local build # or `--prefix /usr` for system wide install
           meson install -C build
-      - run: |
-          ls $HOME/.local
+      
+      - name: Upload 
+        uses: actions/upload-artifact@v4
+        with:
+          name: share
+          path: $HOME/.local
 
