--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -24,12 +24,12 @@ jobs:
       - run: |
           git clone --branch v3 --recurse-submodules https://github.com/Aylur/ags.git
           cd ags
-          meson setup --prefix $HOME/.local build # or `--prefix /usr` for system wide install
+          meson setup --prefix ./build build # or `--prefix /usr` for system wide install
           meson install -C build
       
       - name: Upload 
         uses: actions/upload-artifact@v4
         with:
-          name: share
-          path: $HOME/.local
+          name: build
+          path: build
 
