--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -24,7 +24,7 @@ jobs:
       - run: |
           git clone --branch v3 --recurse-submodules https://github.com/Aylur/ags.git
           cd ags
-          meson setup --prefix ./build build # or `--prefix /usr` for system wide install
+          meson setup --prefix `pwd`/build build # or `--prefix /usr` for system wide install
           meson install -C build
       
       - name: Upload 
