--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -24,7 +24,7 @@ jobs:
       - run: |
           git clone --branch v3 --recurse-submodules https://github.com/Aylur/ags.git
           cd ags
-          meson setup --prefix $HOME/.local build # or `--prefix /usr` for system wide install
+          meson setup --prefix /.local build # or `--prefix /usr` for system wide install
           meson install -C build
       
       - name: Upload 
