--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -15,21 +15,23 @@ jobs:
         uses: actions/checkout@v3
       - run: pacman -Syu --noconfirm git base-devel sudo meson
 
-      # - name: Create a non-root user
-      #   run: |
-      #     useradd -m u
-      #     echo "u ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/u
-      #     chown -R u:u .
-
+      - name: Create a non-root user
+        run: |
+          useradd -m u
+          echo "u ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/u
+          chown -R u:u .
+      - run: sudo -u u bash -c "./makepkg.sh aylurs-gtk-shell"
       - run: |
+          su u
           git clone --branch v3 --recurse-submodules https://github.com/Aylur/ags.git
           cd ags
-          meson setup --prefix /.local build # or `--prefix /usr` for system wide install
+          meson setup --prefix ~/.local build
           meson install -C build
+          ls ~/.local
       
-      - name: Upload 
-        uses: actions/upload-artifact@v4
-        with:
-          name: share
-          path: ${{ env.HOME }}/.local/share
+      # - name: Upload 
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: share
+      #     path: /.local
 
