--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -23,16 +23,16 @@ jobs:
 
       - run: |
           git clone https://aur.archlinux.org/yay.git
-          sudo -u u "makepkg -D yay -si"
+          sudo -u u makepkg -D yay -si
 
       - run: sudo -u u bash -c "yay -S aylurs-gtk-shell"
 
       - run: |
           git clone --branch v3 --recurse-submodules https://github.com/Aylur/ags.git
           cd ags
-          meson setup --prefix /.local build
+          sudo -u u "meson setup --prefix ~/.local build"
           meson install -C build
-          ls /.local
+          ls /
       
       # - name: Upload 
       #   uses: actions/upload-artifact@v4
