--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -31,13 +31,14 @@ jobs:
       - run: |
           git clone --branch v3 --recurse-submodules https://github.com/Aylur/ags.git
           cd ags
-          meson setup --prefix ~/.local build
+          meson setup --prefix ags build
           meson install -C build
-          ls .
+      - run: |
+          ls 
       
-      # - name: Upload 
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: share
-      #     path: /.local
+      - name: Upload 
+        uses: actions/upload-artifact@v4
+        with:
+          name: ags
+          path: ags
 
