--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -31,7 +31,7 @@ jobs:
       - run: |
           git clone --branch v3 --recurse-submodules https://github.com/Aylur/ags.git
           cd ags
-          meson setup --prefix ags build
+          meson setup --prefix /ags build
           meson install -C build
       - run: |
           ls 
@@ -40,5 +40,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ags
-          path: ags
+          path: /ags
 
