ags.yml PKGBUILD

--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - run: pacman -Syu --noconfirm git base-devel sudo
+      - run: pacman -Syu --noconfirm git base-devel sudo meson
 
       - name: Create a non-root user
         run: |
