--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -23,4 +23,14 @@ jobs:
 
       - run: sudo -u u bash -c "makepkg -D ags -si --noconfirm"
 
-      - run: find -name '*.pkg.tar.zst'
+      - run: |
+          rm -rf **/*-debug-*.pkg.tar.zst
+          mkdir -p packages
+          mv */*.pkg.tar.zst packages
+          find -name '*.pkg.tar.zst'
+
+      - name: Upload packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: packages
+          path: packages
