ags.yml hypr.sh

--- a/.github/workflows/ags.yml
+++ b/.github/workflows/ags.yml
@@ -7,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
+    # aylurs-gtk-shell 
   PACKAGES: |
-    aylurs-gtk-shell 
       libastal-gjs-git
       libastal-meta
         libastal-git
