ags.yml arch.yml hypr.sh

--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -1,9 +1,9 @@
 name: Build AUR Packages
 
 on:
-  # push:
-  #   branches:
-  #     - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
 
 jobs:
@@ -21,16 +21,18 @@ jobs:
           echo "u ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/u
           chown -R u:u .
 
-      - run: sudo -u u bash -c "./makepkg.sh fcitx5-mozc-ut zoom opentabletdriver typstyle-bin"
-
-      - run: find -name '*.pkg.tar.zst'
-      - run: echo 'Run `sudo pacman -U *.zst` to install.' >> $GITHUB_STEP_SUMMARY
+      # - run: sudo -u u bash -c "./makepkg.sh qt6ct-kde fcitx5-mozc-ut zoom opentabletdriver typstyle-bin"
+      - run: sudo -u u bash -c "./makepkg.sh paru-bin qt6ct-kde opentabletdriver"
 
       - run: |
-          rm -rf */*-debug-*.pkg.tar.zst
+          find -name '*-debug-*.pkg.tar.zst' -exec rm {} \;
           mkdir -p packages
-          mv */*.pkg.tar.zst packages
-          find -name '*.pkg.tar.zst'
+          find -name '*.pkg.tar.zst' -exec mv {} packages \;
+
+      - run: |
+          echo 'Run `sudo pacman -U *.zst` to install.' >> $GITHUB_STEP_SUMMARY
+          ls packages | sed 's/^/- /g' >> $GITHUB_STEP_SUMMARY
+
 
       - name: Upload packages
         uses: actions/upload-artifact@v4
