--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -39,6 +39,14 @@ jobs:
           echo 'Run `sudo pacman -U *.zst` to install.' >> $GITHUB_STEP_SUMMARY
           ls packages | sed 's/^/- /g' >> $GITHUB_STEP_SUMMARY
 
+      - name: Delete past workflow runs
+        run: |
+          gh api /repos/${{ github.repository }}/actions/runs -q '.workflow_runs[] | .id' \
+          | tail -n +2 \
+          | xargs -P0 -tI{} gh api -X DELETE /repos/${{ github.repository }}/actions/runs/{}
+        env:
+          GH_TOKEN: ${{ github.token }}
+
       - name: Upload packages
         uses: actions/upload-artifact@v4
         with:
