--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -24,7 +24,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - run: pacman -Syu --noconfirm git base-devel sudo github-cli
+      # - run: pacman -Syu --noconfirm git base-devel sudo
       #
       # - name: Create a non-root user
       #   run: |
@@ -41,16 +41,20 @@ jobs:
       #     echo 'Run `sudo pacman -U *.zst` to install.' >> $GITHUB_STEP_SUMMARY
       #     ls packages | sed 's/^/- /g' >> $GITHUB_STEP_SUMMARY
 
-      - name: Delete past workflow runs
-        run: |
-          gh api /repos/${{ github.repository }}/actions/runs -q '.workflow_runs[] | .id' \
-          | tail -n +2 \
-          | xargs -P0 -tI{} gh api -X DELETE /repos/${{ github.repository }}/actions/runs/{}
-        env:
-          GH_TOKEN: ${{ github.token }}
-
       # - name: Upload packages
       #   uses: actions/upload-artifact@v4
       #   with:
       #     name: packages
       #     path: packages
+  clear:
+    needs: build
+    runs-on: ubuntu-latest
+    permissions: write-all
+    steps:
+    - name: Delete past workflow runs
+      run: |
+        gh api /repos/${{ github.repository }}/actions/runs -q '.workflow_runs[] | .id' \
+        | tail -n +2 \
+        | xargs -P0 -tI{} gh api -X DELETE /repos/${{ github.repository }}/actions/runs/{}
+      env:
+        GH_TOKEN: ${{ github.token }}
