aur.yml script.sh

--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -8,14 +8,7 @@ on:
 
 env:
   PACKAGES: |
-<<<<<<< HEAD
-    paru-bin
-    qt6ct-kde
-    fcitx5-mozc-ut
-    zoom
-    opentabletdriver
-    typstyle-bin
-=======
+    betterbird-bin
     fcitx5-mozc-ut
     opentabletdriver
     paru-bin
@@ -23,7 +16,6 @@ env:
     typstyle-bin
     zoom
     zotero-bin
->>>>>>> bec5ea1 (aur.yml PKGBUILD README.md script.sh)
     quickshell 
       google-breakpad
 
