--- a/.github/workflows/aur.yml
+++ b/.github/workflows/aur.yml
@@ -9,6 +9,7 @@ on:
 env:
   PACKAGES: |
     fcitx5-mozc-ut
+      mozc-ut
   # betterbird-bin
   # opentabletdriver
   # paru-bin
@@ -26,7 +27,7 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-      - run: pacman -Syu --noconfirm git base-devel sudo fcitx5 mozc
+      - run: pacman -Syu --noconfirm git base-devel sudo fcitx5
 
       - name: Create a non-root user
         run: |
